fixed navbar, and menu layout

--- a/bastille.html
+++ b/bastille.html
@@ -17,16 +17,12 @@
 <body>
     <div class="container">
         <header>
-            <div class="navbar row">
-                <div class="column">
-                    <a href="#" class="back-icon"><i class="fa-solid fa-arrow-left"></i></a>
-                </div>
-                <div class="column">
-                    <img class="navbar-logo" src="./images/ohmyfood.png">
-                </div>
+            <div class="navbar">
+                <a href="#" class="back-icon"><i class="fa-solid fa-arrow-left"></i></a>
+                <img class="navbar-logo" src="./images/ohmyfood.png">
             </div>
-            <img class="restaurant-img desktop-img" src="./images/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Toa Heftiba"
-                title="Toa Heftiba Restaurant">
+            <img class="restaurant-img desktop-img" src="./images/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+                alt="Toa Heftiba" title="Toa Heftiba Restaurant">
         </header>
 
         <section class="menu spacing bkg-light-gray relative">
@@ -43,44 +39,44 @@
                     </form>
                 </div>
             </div>
-            <div class="desktop-row menu-gap">
+            <div class="desktop-row">
                 <div class="menu-dishes bottom-spacing">
                     <p class="text-large graphite">ENTREES</p>
                     <div class="line"></div>
 
                     <a href="#" class="dishes row menu--fade menu--fade-1">
-                        <div class="column double">
+                        <div class="double">
                             <h2 class="ellipsis">Citrus Squid Carpaccio</h2>
                             <p class="ellipsis">With orange zest</p>
                         </div>
-                        <div class="column price">
+                        <div class="price">
                             <p>25€</p>
                         </div>
-                        <div class="column dish-icon">
+                        <div class="dish-icon">
                             <i class="fa-solid fa-circle-check"></i>
                         </div>
                     </a>
                     <a href="#" class="dishes row menu--fade menu--fade-2">
-                        <div class="column double">
+                        <div class="double">
                             <h2 class="ellipsis">Grandmother's Vegetable Soup</h2>
                             <p class="ellipsis">Carrots, parsnips, Jerusalem artichoke</p>
                         </div>
-                        <div class="column price">
+                        <div class="price">
                             <p>35€</p>
                         </div>
-                        <div class="column dish-icon">
+                        <div class="dish-icon">
                             <i class="fa-solid fa-circle-check"></i>
                         </div>
                     </a>
                     <a href="#" class="dishes row menu--fade menu--fade-3">
-                        <div class="column double">
+                        <div class="double">
                             <h2 class="ellipsis">Onion Soup</h2>
                             <p class="ellipsis">Revisted</p>
                         </div>
-                        <div class="column price">
+                        <div class="price">
                             <p>20€</p>
                         </div>
-                        <div class="column dish-icon">
+                        <div class="dish-icon">
                             <i class="fa-solid fa-circle-check"></i>
                         </div>
                     </a>
@@ -93,38 +89,38 @@
                     <div class="line"></div>
 
                     <a href="#" class="dishes row menu--fade menu--fade-1">
-                        <div class="column double">
+                        <div class="double">
                             <h2 class="ellipsis">Scallops</h2>
                             <p class="ellipsis">With mashed parsnip</p>
                         </div>
-                        <div class="column price">
+                        <div class="price">
                             <p>40€</p>
                         </div>
-                        <div class="column dish-icon">
+                        <div class="dish-icon">
                             <i class="fa-solid fa-circle-check"></i>
                         </div>
                     </a>
                     <a href="#" class="dishes row menu--fade menu--fade-2">
-                        <div class="column double">
+                        <div class="double">
                             <h2 class="ellipsis">Magret de canard</h2>
                             <p class="ellipsis">With mashed potatoes</p>
                         </div>
-                        <div class="column price">
+                        <div class="price">
                             <p>35€</p>
                         </div>
-                        <div class="column dish-icon">
+                        <div class="dish-icon">
                             <i class="fa-solid fa-circle-check"></i>
                         </div>
                     </a>
                     <a href="#" class="dishes row menu--fade menu--fade-3">
-                        <div class="column double">
+                        <div class="double">
                             <h2 class="ellipsis">Game Hen</h2>
                             <p class="ellipsis">With vegetable gnocchis</p>
                         </div>
-                        <div class="column price">
+                        <div class="price">
                             <p>44€</p>
                         </div>
-                        <div class="column dish-icon">
+                        <div class="dish-icon">
                             <i class="fa-solid fa-circle-check"></i>
                         </div>
                     </a>
@@ -137,38 +133,38 @@
                     <div class="line"></div>
 
                     <a href="#" class="dishes row menu--fade menu--fade-1">
-                        <div class="column double">
+                        <div class="double">
                             <h2 class="ellipsis">Floral Ice Cream</h2>
                             <p class="ellipsis">With hazelnut butter</p>
                         </div>
-                        <div class="column price">
+                        <div class="price">
                             <p>18€</p>
                         </div>
-                        <div class="column dish-icon">
+                        <div class="dish-icon">
                             <i class="fa-solid fa-circle-check"></i>
                         </div>
                     </a>
                     <a href="#" class="dishes row menu--fade menu--fade-2">
-                        <div class="column double">
+                        <div class="double">
                             <h2 class="ellipsis">Chocolate Lava Cake</h2>
                             <p class="ellipsis">Revisted</p>
                         </div>
-                        <div class="column price">
+                        <div class="price">
                             <p>22€</p>
                         </div>
-                        <div class="column dish-icon">
+                        <div class="dish-icon">
                             <i class="fa-solid fa-circle-check"></i>
                         </div>
                     </a>
                     <a href="#" class="dishes row menu--fade menu--fade-3">
-                        <div class="column double">
+                        <div class="double">
                             <h2 class="ellipsis">Napolean</h2>
                             <p class="ellipsis">With blueberries and marzipan</p>
                         </div>
-                        <div class="column price">
+                        <div class="price">
                             <p>23€</p>
                         </div>
-                        <div class="column dish-icon">
+                        <div class="dish-icon">
                             <i class="fa-solid fa-circle-check"></i>
                         </div>
                     </a>
