--- a/the-enchanted.html
+++ b/the-enchanted.html
@@ -17,13 +17,9 @@
 <body>
     <div class="container">
         <header>
-            <div class="navbar row">
-                <div class="column">
-                    <a href="#" class="back-icon"><i class="fa-solid fa-arrow-left"></i></a>
-                </div>
-                <div class="column">
-                    <img class="navbar-logo" src="../images/ohmyfood.png">
-                </div>
+            <div class="navbar">
+                <a href="#" class="back-icon"><i class="fa-solid fa-arrow-left"></i></a>
+                <img class="navbar-logo" src="./images/ohmyfood.png">
             </div>
             <img class="restaurant-img desktop-img" src="./images/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Toa Heftiba"
                 title="Toa Heftiba Restaurant">
@@ -49,50 +45,50 @@
                     <div class="line"></div>
 
                     <a href="#" class="dishes row menu--fade menu--fade-1">
-                        <div class="column double">
+                        <div class="double">
                             <h2 class="ellipsis">Foie Gras Ravioli</h2>
                             <p class="ellipsis">With truffle cream</p>
                         </div>
-                        <div class="column price">
+                        <div class="price">
                             <p>25€</p>
                         </div>
-                        <div class="column dish-icon">
+                        <div class="dish-icon">
                             <i class="fa-solid fa-circle-check"></i>
                         </div>
                     </a>
                     <a href="#" class="dishes row menu--fade menu--fade-2">
-                        <div class="column double">
+                        <div class="double">
                             <h2 class="ellipsis">Oscietra Caviar</h2>
                             <p class="ellipsis">With buckwheat blinis</p>
                         </div>
-                        <div class="column price">
+                        <div class="price">
                             <p>35€</p>
                         </div>
-                        <div class="column dish-icon">
+                        <div class="dish-icon">
                             <i class="fa-solid fa-circle-check"></i>
                         </div>
                     </a>
                     <a href="#" class="dishes row menu--fade menu--fade-3">
-                        <div class="column double">
+                        <div class="double">
                             <h2 class="ellipsis">Lobster and Leek Foam</h2>
                             <p class="ellipsis">Marinated with orange zest</p>
                         </div>
-                        <div class="column price">
+                        <div class="price">
                             <p>20€</p>
                         </div>
-                        <div class="column dish-icon">
+                        <div class="dish-icon">
                             <i class="fa-solid fa-circle-check"></i>
                         </div>
                     </a>
                     <a href="#" class="dishes row menu--fade menu--fade-3">
-                        <div class="column double">
+                        <div class="double">
                             <h2 class="ellipsis">Duck Foie Gras</h2>
                             <p class="ellipsis">With fig jam and grilled baguette</p>
                         </div>
-                        <div class="column price">
+                        <div class="price">
                             <p>35€</p>
                         </div>
-                        <div class="column dish-icon">
+                        <div class="dish-icon">
                             <i class="fa-solid fa-circle-check"></i>
                         </div>
                     </a>
@@ -105,38 +101,38 @@
                     <div class="line"></div>
 
                     <a href="#" class="dishes row menu--fade menu--fade-1">
-                        <div class="column double">
+                        <div class="double">
                             <h2 class="ellipsis">Fresh Buttered Scallops</h2>
                             <p class="ellipsis">With white celery puree</p>
                         </div>
-                        <div class="column price">
+                        <div class="price">
                             <p>40€</p>
                         </div>
-                        <div class="column dish-icon">
+                        <div class="dish-icon">
                             <i class="fa-solid fa-circle-check"></i>
                         </div>
                     </a>
                     <a href="#" class="dishes row menu--fade menu--fade-2">
-                        <div class="column double">
+                        <div class="double">
                             <h2 class="ellipsis">Pan-Fried Lobster</h2>
                             <p class="ellipsis">With mashed sweet potatoes</p>
                         </div>
-                        <div class="column price">
+                        <div class="price">
                             <p>35€</p>
                         </div>
-                        <div class="column dish-icon">
+                        <div class="dish-icon">
                             <i class="fa-solid fa-circle-check"></i>
                         </div>
                     </a>
                     <a href="#" class="dishes row menu--fade menu--fade-3">
-                        <div class="column double">
+                        <div class="double">
                             <h2 class="ellipsis">Braised Ox Tail</h2>
                             <p class="ellipsis">With wild rice and lemon zest</p>
                         </div>
-                        <div class="column price">
+                        <div class="price">
                             <p>44€</p>
                         </div>
-                        <div class="column dish-icon">
+                        <div class="dish-icon">
                             <i class="fa-solid fa-circle-check"></i>
                         </div>
                     </a>
@@ -149,38 +145,38 @@
                     <div class="line"></div>
 
                     <a href="#" class="dishes row menu--fade menu--fade-1">
-                        <div class="column double">
+                        <div class="double">
                             <h2 class="ellipsis">Chocolate and Hazelnut Macaroon</h2>
                             <p class="ellipsis">With caramel butter ice cream</p>
                         </div>
-                        <div class="column price">
+                        <div class="price">
                             <p>18€</p>
                         </div>
-                        <div class="column dish-icon">
+                        <div class="dish-icon">
                             <i class="fa-solid fa-circle-check"></i>
                         </div>
                     </a>
                     <a href="#" class="dishes row menu--fade menu--fade-2">
-                        <div class="column double">
+                        <div class="double">
                             <h2 class="ellipsis">Baba au rhum</h2>
                             <p class="ellipsis">With lemon drizzle</p>
                         </div>
-                        <div class="column price">
+                        <div class="price">
                             <p>22€</p>
                         </div>
-                        <div class="column dish-icon">
+                        <div class="dish-icon">
                             <i class="fa-solid fa-circle-check"></i>
                         </div>
                     </a>
                     <a href="#" class="dishes row menu--fade menu--fade-3">
-                        <div class="column double">
+                        <div class="double">
                             <h2 class="ellipsis">Lemon Meringue Pie</h2>
                             <p class="ellipsis">Destructured</p>
                         </div>
-                        <div class="column price">
+                        <div class="price">
                             <p>23€</p>
                         </div>
-                        <div class="column dish-icon">
+                        <div class="dish-icon">
                             <i class="fa-solid fa-circle-check"></i>
                         </div>
                     </a>
