--- a/the-full.html
+++ b/the-full.html
@@ -17,13 +17,9 @@
 <body>
     <div class="container">
         <header>
-            <div class="navbar row">
-                <div class="column">
-                    <a href="#" class="back-icon"><i class="fa-solid fa-arrow-left"></i></a>
-                </div>
-                <div class="column">
-                    <img class="navbar-logo" src="../images/ohmyfood.png">
-                </div>
+            <div class="navbar">
+                <a href="#" class="back-icon"><i class="fa-solid fa-arrow-left"></i></a>
+                <img class="navbar-logo" src="./images/ohmyfood.png">
             </div>
             <img class="restaurant-img desktop-img" src="./images/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
                 alt="Toa Heftiba" title="Toa Heftiba Restaurant">
@@ -49,38 +45,38 @@
                     <div class="line"></div>
 
                     <a href="#" class="dishes row menu--fade menu--fade-1">
-                        <div class="column double">
+                        <div class="double">
                             <h2 class="ellipsis">Escargot</h2>
                             <p class="ellipsis">With southern French spices</p>
                         </div>
-                        <div class="column price">
+                        <div class="price">
                             <p>25€</p>
                         </div>
-                        <div class="column dish-icon">
+                        <div class="dish-icon">
                             <i class="fa-solid fa-circle-check"></i>
                         </div>
                     </a>
                     <a href="#" class="dishes row menu--fade menu--fade-2">
-                        <div class="column double">
+                        <div class="double">
                             <h2 class="ellipsis">Duck Foie Gras</h2>
                             <p class="ellipsis">With black truffle shavings</p>
                         </div>
-                        <div class="column price">
+                        <div class="price">
                             <p>35€</p>
                         </div>
-                        <div class="column dish-icon">
+                        <div class="dish-icon">
                             <i class="fa-solid fa-circle-check"></i>
                         </div>
                     </a>
                     <a href="#" class="dishes row menu--fade menu--fade-3">
-                        <div class="column double">
+                        <div class="double">
                             <h2 class="ellipsis">Fried egg</h2>
                             <p class="ellipsis">Seasoned with truffle cream and pepper</p>
                         </div>
-                        <div class="column price">
+                        <div class="price">
                             <p>20€</p>
                         </div>
-                        <div class="column dish-icon">
+                        <div class="dish-icon">
                             <i class="fa-solid fa-circle-check"></i>
                         </div>
                     </a>
@@ -93,38 +89,38 @@
                     <div class="line"></div>
 
                     <a href="#" class="dishes row menu--fade menu--fade-1">
-                        <div class="column double">
+                        <div class="double">
                             <h2 class="ellipsis">Herb-Encrusted Steak</h2>
                             <p class="ellipsis">With delicately sliced and seasoned vegetables</p>
                         </div>
-                        <div class="column price">
+                        <div class="price">
                             <p>40€</p>
                         </div>
-                        <div class="column dish-icon">
+                        <div class="dish-icon">
                             <i class="fa-solid fa-circle-check"></i>
                         </div>
                     </a>
                     <a href="#" class="dishes row menu--fade menu--fade-2">
-                        <div class="column double">
+                        <div class="double">
                             <h2 class="ellipsis">Ox Tail Shepard's Pie</h2>
                             <p class="ellipsis">With black truffle and pureed parsnips</p>
                         </div>
-                        <div class="column price">
+                        <div class="price">
                             <p>35€</p>
                         </div>
-                        <div class="column dish-icon">
+                        <div class="dish-icon">
                             <i class="fa-solid fa-circle-check"></i>
                         </div>
                     </a>
                     <a href="#" class="dishes row menu--fade menu--fade-3">
-                        <div class="column double">
+                        <div class="double">
                             <h2 class="ellipsis">Filet of Sole</h2>
                             <p class="ellipsis">With citrus dressing</p>
                         </div>
-                        <div class="column price">
+                        <div class="price">
                             <p>44€</p>
                         </div>
-                        <div class="column dish-icon">
+                        <div class="dish-icon">
                             <i class="fa-solid fa-circle-check"></i>
                         </div>
                     </a>
@@ -137,38 +133,38 @@
                     <div class="line"></div>
 
                     <a href="#" class="dishes row menu--fade menu--fade-1">
-                        <div class="column double">
+                        <div class="double">
                             <h2 class="ellipsis">Paris-Brest</h2>
                             <p class="ellipsis">Revisted</p>
                         </div>
-                        <div class="column price">
+                        <div class="price">
                             <p>18€</p>
                         </div>
-                        <div class="column dish-icon">
+                        <div class="dish-icon">
                             <i class="fa-solid fa-circle-check"></i>
                         </div>
                     </a>
                     <a href="#" class="dishes row menu--fade menu--fade-2">
-                        <div class="column double">
+                        <div class="double">
                             <h2 class="ellipsis">Chocolate Macaroons</h2>
                             <p class="ellipsis">With canilla ice cream</p>
                         </div>
-                        <div class="column price">
+                        <div class="price">
                             <p>22€</p>
                         </div>
-                        <div class="column dish-icon">
+                        <div class="dish-icon">
                             <i class="fa-solid fa-circle-check"></i>
                         </div>
                     </a>
                     <a href="#" class="dishes row menu--fade menu--fade-3">
-                        <div class="column double">
+                        <div class="double">
                             <h2 class="ellipsis">Chocolate Mousse</h2>
                             <p class="ellipsis">With spices and black truffle</p>
                         </div>
-                        <div class="column price">
+                        <div class="price">
                             <p>23€</p>
                         </div>
-                        <div class="column dish-icon">
+                        <div class="dish-icon">
                             <i class="fa-solid fa-circle-check"></i>
                         </div>
                     </a>
