--- a/le-gourmand.html
+++ b/le-gourmand.html
@@ -17,13 +17,9 @@
 <body>
     <div class="container">
         <header>
-            <div class="navbar row">
-                <div class="column">
-                    <a href="#" class="back-icon"><i class="fa-solid fa-arrow-left"></i></a>
-                </div>
-                <div class="column">
-                    <img class="navbar-logo" src="../images/ohmyfood.png">
-                </div>
+            <div class="navbar">
+                <a href="#" class="back-icon"><i class="fa-solid fa-arrow-left"></i></a>
+                <img class="navbar-logo" src="./images/ohmyfood.png">
             </div>
             <img class="restaurant-img desktop-img" src="./images/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
                 alt="Toa Heftiba" title="Toa Heftiba Restaurant">
@@ -49,38 +45,38 @@
                     <div class="line"></div>
 
                     <a href="#" class="dishes row menu--fade menu--fade-1">
-                        <div class="column double">
+                        <div class="double">
                             <h2 class="ellipsis">Tuna Carpaccio</h2>
                             <p class="ellipsis">Seasoned with yuzu</p>
                         </div>
-                        <div class="column price">
+                        <div class="price">
                             <p>25€</p>
                         </div>
-                        <div class="column dish-icon">
+                        <div class="dish-icon">
                             <i class="fa-solid fa-circle-check"></i>
                         </div>
                     </a>
                     <a href="#" class="dishes row menu--fade menu--fade-2">
-                        <div class="column double">
+                        <div class="double">
                             <h2 class="ellipsis">Cruncky Lobster Croquets</h2>
                             <p class="ellipsis">With seasonal vegetables</p>
                         </div>
-                        <div class="column price">
+                        <div class="price">
                             <p>35€</p>
                         </div>
-                        <div class="column dish-icon">
+                        <div class="dish-icon">
                             <i class="fa-solid fa-circle-check"></i>
                         </div>
                     </a>
                     <a href="#" class="dishes row menu--fade menu--fade-3">
-                        <div class="column double">
+                        <div class="double">
                             <h2 class="ellipsis">Mushroom soup</h2>
                             <p class="ellipsis">With truffles</p>
                         </div>
-                        <div class="column price">
+                        <div class="price">
                             <p>20€</p>
                         </div>
-                        <div class="column dish-icon">
+                        <div class="dish-icon">
                             <i class="fa-solid fa-circle-check"></i>
                         </div>
                     </a>
@@ -93,38 +89,38 @@
                     <div class="line"></div>
 
                     <a href="#" class="dishes row menu--fade menu--fade-1">
-                        <div class="column double">
+                        <div class="double">
                             <h2 class="ellipsis">Roast Chicken with Provincal Herbs</h2>
                             <p class="ellipsis">With truffle cream</p>
                         </div>
-                        <div class="column price">
+                        <div class="price">
                             <p>40€</p>
                         </div>
-                        <div class="column dish-icon">
+                        <div class="dish-icon">
                             <i class="fa-solid fa-circle-check"></i>
                         </div>
                     </a>
                     <a href="#" class="dishes row menu--fade menu--fade-2">
-                        <div class="column double">
+                        <div class="double">
                             <h2 class="ellipsis">Roasted Lobster</h2>
                             <p class="ellipsis">With seasonal vegetables</p>
                         </div>
-                        <div class="column price">
+                        <div class="price">
                             <p>35€</p>
                         </div>
-                        <div class="column dish-icon">
+                        <div class="dish-icon">
                             <i class="fa-solid fa-circle-check"></i>
                         </div>
                     </a>
                     <a href="#" class="dishes row menu--fade menu--fade-3">
-                        <div class="column double">
+                        <div class="double">
                             <h2 class="ellipsis">Angust Beef Ribs</h2>
                             <p class="ellipsis">With mashed parshnips</p>
                         </div>
-                        <div class="column price">
+                        <div class="price">
                             <p>44€</p>
                         </div>
-                        <div class="column dish-icon">
+                        <div class="dish-icon">
                             <i class="fa-solid fa-circle-check"></i>
                         </div>
                     </a>
@@ -137,38 +133,38 @@
                     <div class="line"></div>
 
                     <a href="#" class="dishes row menu--fade menu--fade-1">
-                        <div class="column double">
+                        <div class="double">
                             <h2 class="ellipsis">Assorted Dessert Plate</h2>
                             <p class="ellipsis">Chef's choice</p>
                         </div>
-                        <div class="column price">
+                        <div class="price">
                             <p>18€</p>
                         </div>
-                        <div class="column dish-icon">
+                        <div class="dish-icon">
                             <i class="fa-solid fa-circle-check"></i>
                         </div>
                     </a>
                     <a href="#" class="dishes row menu--fade menu--fade-2">
-                        <div class="column double">
+                        <div class="double">
                             <h2 class="ellipsis">Crème brulée</h2>
                             <p class="ellipsis">Revisted</p>
                         </div>
-                        <div class="column price">
+                        <div class="price">
                             <p>22€</p>
                         </div>
-                        <div class="column dish-icon">
+                        <div class="dish-icon">
                             <i class="fa-solid fa-circle-check"></i>
                         </div>
                     </a>
                     <a href="#" class="dishes row menu--fade menu--fade-3">
-                        <div class="column double">
+                        <div class="double">
                             <h2 class="ellipsis">Tiramissu</h2>
                             <p class="ellipsis">With hazelnuts</p>
                         </div>
-                        <div class="column price">
+                        <div class="price">
                             <p>23€</p>
                         </div>
-                        <div class="column dish-icon">
+                        <div class="dish-icon">
                             <i class="fa-solid fa-circle-check"></i>
                         </div>
                     </a>
