added the links to navigate through the pages

--- a/bastille.html
+++ b/bastille.html
@@ -18,7 +18,7 @@
     <div class="container">
         <header>
             <div class="navbar">
-                <a href="#" class="back-icon"><i class="fa-solid fa-arrow-left"></i></a>
+                <a href="index.html" class="back-icon"><i class="fa-solid fa-arrow-left"></i></a>
                 <img class="navbar-logo" src="./images/ohmyfood.png">
             </div>
             <img class="restaurant-img desktop-img" src="./images/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
