--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                         <div class="row">
                             <div class="column">
                                 <h2 class="text-large">The Full Palette</h2>
-                                <a href="#" class="stretch-link text">New York</a>
+                                <a href="the-full.html" class="stretch-link text">New York</a>
                             </div>
                             <div>
                                 <button type="submit" class="z-1 card-icon">
@@ -96,7 +96,7 @@
                         <div class="row">
                             <div class="column">
                                 <h2 class="text-large">The Enchanted Plate</h2>
-                                <a href="#" class="stretch-link text">New York</a>
+                                <a href="the-enchanted.html" class="stretch-link text">New York</a>
                             </div>
                             <div>
                                 <button type="submit" class="z-1 card-icon">
@@ -114,7 +114,7 @@
                         <div class="row">
                             <div class="column">
                                 <h2 class="text-large">Bastille</h2>
-                                <a href="#" class="stretch-link text">New York</a>
+                                <a href="bastille.html" class="stretch-link text">New York</a>
                             </div>
                             <div>
                                 <button type="submit" class="z-1 card-icon">
@@ -133,7 +133,7 @@
                         <div class="row">
                             <div class="column">
                                 <h2 class="text-large">Le Gourmand</h2>
-                                <a href="#" class="stretch-link text">New York</a>
+                                <a href="le-gourmand.html" class="stretch-link text">New York</a>
                             </div>
                             <div>
                                 <button type="submit" class="z-1 card-icon">
