--- a/the-full.html
+++ b/the-full.html
@@ -179,24 +179,26 @@
     </div>
 
     <section class="spacing bkg-light-black spacing-top full-width">
-        <div class="column small-gap desktop-row footer-gap">
-            <p class="text-large white logo-font">
-                ohmyfood
-            </p>
-            <a href="#" class="text white">
-                <i class="fa-solid fa-utensils small-width s-icon"></i>
-                Suggest a restaurant
-            </a>
-            <a href="#" class="text white">
-                <i class="fa-solid fa-handshake-angle small-width xs-icon"></i>
-                Become a partner
-            </a>
-            <a href="#" class="text white">
-                Legal
-            </a>
-            <a href="#" class="text white">
-                Contact
-            </a>
+        <div class="container">
+            <div class="column small-gap desktop-row footer-gap">
+                <p class="text-large white logo-font">
+                    ohmyfood
+                </p>
+                <a href="#" class="text white">
+                    <i class="fa-solid fa-utensils small-width s-icon"></i>
+                    Suggest a restaurant
+                </a>
+                <a href="#" class="text white">
+                    <i class="fa-solid fa-handshake-angle small-width xs-icon"></i>
+                    Become a partner
+                </a>
+                <a href="#" class="text white">
+                    Legal
+                </a>
+                <a href="#" class="text white">
+                    Contact
+                </a>
+            </div>
         </div>
 
     </section>
