alt added to logo image

--- a/bastille.html
+++ b/bastille.html
@@ -19,7 +19,7 @@
         <header>
             <div class="navbar">
                 <a href="index.html" class="back-icon"><i class="fa-solid fa-arrow-left"></i></a>
-                <img class="navbar-logo" src="./images/ohmyfood.png">
+                <img class="navbar-logo" src="./images/ohmyfood.png" alt="logo" title="ohmyfood">
             </div>
             <img class="restaurant-img desktop-img" src="./images/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
                 alt="Toa Heftiba" title="Toa Heftiba Restaurant">
