--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
         <header>
             <div class="navbar navbar-shadow row align-center">
-                <img class="navbar-logo" src="./images/ohmyfood.png">
+                <img class="navbar-logo" src="./images/ohmyfood.png" alt="logo" title="ohmyfood">
             </div>
             <div class="location-info text">
                 <div class="location-icon spacing-icon">
