--- a/bastille.html
+++ b/bastille.html
@@ -180,9 +180,9 @@
     <section class="spacing bkg-light-black spacing-top full-width">
         <div class="container">
             <div class="column small-gap desktop-row footer-gap">
-                <p class="text-large white logo-font">
+                <h2 class="text-large white logo-font">
                     ohmyfood
-                </p>
+                </h2>
                 <a href="#" class="text white">
                     <i class="fa-solid fa-utensils small-width s-icon"></i>
                     Suggest a restaurant
