--- a/index.html
+++ b/index.html
@@ -152,9 +152,9 @@
     <section class="spacing bkg-light-black spacing-top">
         <div class="container">
             <div class="column small-gap desktop-row footer-gap">
-                <p class="text-large white logo-font">
+                <h2 class="text-large white logo-font">
                     ohmyfood
-                </p>
+                </h2>
                 <a href="#" class="text white">
                     <i class="fa-solid fa-utensils small-width s-icon"></i>
                     Suggest a restaurant
