footer logo weight fixed

--- a/index.html
+++ b/index.html
@@ -149,12 +149,12 @@
         </section>
     </div>
 
-    <section class="spacing bkg-light-black spacing-top">
+    <footer class="spacing bkg-light-black spacing-top">
         <div class="container">
             <div class="column small-gap desktop-row footer-gap">
-                <h2 class="text-large white logo-font">
+                <h3 class="text-large white logo-font">
                     ohmyfood
-                </h2>
+                </h3>
                 <a href="#" class="text white">
                     <i class="fa-solid fa-utensils small-width s-icon"></i>
                     Suggest a restaurant
@@ -171,8 +171,7 @@
                 </a>
             </div>
         </div>
-
-    </section>
+    </footer>
 
 
 
